# bunkr-uploader

./: Cargo.toml  README.md
src/: main.rs
src/modules/: album.rs  mod.rs  upload.rs
src/utils/: api.rs  extras.rs  fs.rs  mod.rs  paths.rs  token.rs
