[package]
name = "bunkr-uploader"
version = "0.2.4"
authors = ["Debiprasad Das <debiprasaddas@proton.me>"]
edition = "2024"
description = "A cli tool to upload files to bunkr.cr"
repository = "https://github.com/DebNation/bunkr-uploader"
license = "GPL-3.0-or-later"
keywords = [
  "bunkr",
  "cli",
  "cli-tool",
  "upload",
]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
human-panic = "2.0.3"
indicatif = "0.18.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
term_size = "0.3.2"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
